--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en"></html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/png" href="../assets/images/logo.png">
+    <link rel="stylesheet" type="text/css" href="../static/styles.css">  
+    <title>NEWSIC</title>
+</head>
+
+<body>
+    <header>
+        <div class="container">
+          <img class="logo" src="../assets/images/logo.png">
+    
+          <nav>
+            <ul>
+              <li><a href="index.html" target="_self">Home</a></li>
+              <li><a href="artists.html">Our Artists</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      
+
+      <br>
+      <p class="headings">OUR GOAL</p><br>
+      <div class="text_div">    
+        <p class="text_red">Creating a safe place for up and coming artists.
+            Road to success is difficult and expensive. Our goal is to 
+        make it easier for the ones who deserve it, but can't afford it. We're willing to provide promotion through
+        social media, campaigns and other services.</p>
+      </div><br>
+
+      <div class="seperator"></div>
+
+      <p class="headings">OUR SERVICES</p><br>
+      <div class="text_div">    
+        <ul>
+            <li>Posts on instagram (both artist's and NEWSIC account).</li>
+            <li>Tik-Tok videos depending on the current trends and crowd's preferences.</li>
+            <li>Connections and networking with people from the music industry.</li>
+            <li>A platform that  can showcase artist's bio, songs and social media to the world.</li>
+            <li>Support, trust and belief to artist's dreams and efforts.</li>
+        </ul>
+      </div><br>
+
+      <div class="seperator"></div>
+      <div class="platform">
+        <br>
+        <h1>OUR PLATFORM</h1>
+        <br>
+        <div class="text_div">    
+            <p class="text_orange">In order to fulfill our goal, we want to build a platform.
+              The following photos are part of our vision. Share us your impressions!
+            </p>
+          </div><br>
+          <div class="seperator"></div><br>
+          <div class="screenshot">
+            <img src="../assets/images/who we are.png">
+            <img src="../assets/images/discover.png">
+            <img src="../assets/images/artist_profile.png">
+            <img  src="../assets/images/contest.png"><br>
+      </div><br>
+      <button class="sub_btn" href="#">Share your opinion!</button>
+      </div>
+      <div class="newsic">
+        <img src="../assets/images/logo.png">
+        <a href="https://www.instagram.com/newsicindustries/" target="_blank"><img src="../assets/images/instagram-icon-33469.png" id="icon" style="height: 40px; width: 40px;"></a>> &emsp;
+        <a href="https://www.linkedin.com/company/newsic/" target="_blank"><img src="../assets/images/linkedin-logo-png-1826.png" id="icon" style="height: 40px; width: 40px;"></a> &emsp; 
+        <a href ="mailto:newsicindustries@gmail.com"><img src="../assets/images/logo-gmail-9952.png" id="icons" style="height: 40px; width: 50px;"></a> &emsp;        
+    </div>
+</body>
+
+</html>
