--- a/artists.html
+++ b/artists.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">  
+    <link rel="icon" type="image/png" href="../assets/images/logo.png">
+    <link rel="stylesheet" type="text/css" href="../static/styles.css">  
     <title>NEWSIC</title>
 </head>
 
@@ -23,7 +22,8 @@
             </ul>
           </nav>
         </div>
-      </header><br>
+      </header>
+
       <div style="margin-top: 10%;"> 
         <p class="headings" >
           IN THIS SECTION WE WILL SHOWCASE THE ARTISTS OF OUR TEAM! 
@@ -33,10 +33,10 @@
           CURRENTLY UNDER CONSTRUCTION...
         </p></div><br>
         <div class="newsic">
-          <img src="../assets/images/logo.png">
-          <a href="https://www.instagram.com/newsicindustries/" target="_blank"><img src="../assets/images/instagram-icon-33469.png" id="icon" style="height: 40px; width: 40px;"></a>> &emsp;
-          <a href="https://www.linkedin.com/company/newsic/" target="_blank"><img src="../assets/images/linkedin-logo-png-1826.png" id="icon" style="height: 40px; width: 40px;"></a> &emsp; 
-          <a href ="mailto:newsicindustries@gmail.com"><img src="../assets/images/logo-gmail-9952.png" id="icons" style="height: 40px; width: 50px;"></a> &emsp;        
+          <img src="../assets/images/logo.png" style="height: 20px; width: 28px;">
+          <a href="https://www.instagram.com/newsicindustries/" target="_blank"><img src="../assets/images/instagram-icon-33469.png" id="icon" style="height: 20px; width: 20px;"></a>> &emsp;
+          <a href="https://www.linkedin.com/company/newsic/" target="_blank"><img src="../assets/images/linkedin-logo-png-1826.png" id="icon" style="height: 20px; width: 20px;"></a> &emsp; 
+          <a href ="mailto:newsicindustries@gmail.com"><img src="../assets/images/logo-gmail-9952.png" id="icons" style="height: 20px; width: 30px;"></a> &emsp;        
       </div>
 </body>
 
