--- a/artists.html
+++ b/artists.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/png" href="../assets/images/logo.png">
-    <link rel="stylesheet" type="text/css" href="../static/styles.css">  
+    <link rel="stylesheet" type="text/css" href="styles.css">  
     <title>NEWSIC</title>
 </head>
 
