--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/png" href="../assets/images/logo.png">
-    <link rel="stylesheet" type="text/css" href="styles.css">  
+    <link rel="stylesheet" type="text/css" href="../static/styles.css">  
     <title>NEWSIC</title>
 </head>
 
@@ -69,7 +69,7 @@
       <div class="seperator"></div>
       </div><br>
       <div class="newsic">
-        <img src="../assets/images/logo.png" style="height: 20px; width: 20px;">
+        <img src="../assets/images/logo.png" style="height: 25px; width: 34px;">
         <a href="https://www.instagram.com/newsicindustries/" target="_blank"><img src="../assets/images/instagram-icon-33469.png" id="icon" style="height: 20px; width: 20px;"></a>> &emsp;
         <a href="https://www.linkedin.com/company/newsic/" target="_blank"><img src="../assets/images/linkedin-logo-png-1826.png" id="icon" style="height: 20px; width: 20px;"></a> &emsp; 
         <a href ="mailto:newsicindustries@gmail.com"><img src="../assets/images/logo-gmail-9952.png" id="icons" style="height: 20px; width: 30px;"></a> &emsp;        
